# biorange

./: .gitignore  README.md  pyproject.toml
biorange/: __init__.py  meta.yaml
biorange/component/: __init__.py  tcmsp_component.py
biorange/data/: TCM_NGM_ISOMERIC_SMILES.csv  TCM_NGM_inchike_isosmile_11294.csv  TCM_NGM_inchikey_isosmile_12184.csv  TCM_NGM_inchikey_isosmmieles_11414.csv  admet_complete_info.csv  admet_filtered_ingredients.csv  chembl_uniport_gene25.csv  chembl_uniport_gene25_clean.csv  drug_disease_intersection.csv  first_input_data.csv  inchikey.csv  kegg_df.csv  node_file.csv  node_file333.csv  shared targets of drugs and diseases.csv  shared targets.csv  smiles.csv  target_df.csv  type_file.csv  中药NGM_combined_ingredients_inchikey_smiles.csv
biorange/dock/: __init__.py  dock_clean.py  dock_plot.py  dock_plot_interaction.py  dock_run_autodock.py  dock_run_diffdock.py  dock_score.py  dock_split.py  smina.py
biorange/dock/todo/: rank1.sdf  分子对接-本地smina.ipynb
biorange/enrich_analysis/: __init__.py  enrich_gokegg.py  gokegg_4divided.py  gokegg_combined.py  plot_bar_gokegg.py
biorange/logger/: logging_config.py
biorange/ppi/: __init__.py  generate_type_file.py  ppi.py  ppi_final.py  ppi_fomula.py  ppi_plot.py  type.py  type_2.py
biorange/target_predict/: __init__.py
biorange/target_predict/data_processing/: __init__.py  admet.ipynb  admet_filtered_ingredients.csv  ingredient_input.py
biorange/target_predict/disease_target/: genecards.py  omim.py  ttd.py
biorange/target_predict/mol_target/: chembl.ipynb  chembl.py  chembl_alltar.py  chembl_final.py  chembl_local.py  chembl_match.py  chembl_new.py  stitch.py  stitch_inchikey.py  tcmsp.py  tcmsp_inchikey.py  tcmsp_smiles.py  uniport_mapping.py  删除完全重复行_整合表格.ipynb
biorange/utils/: package_fileload.py
biorange/venn/: __init__.py  dock_plot.html  enr_GO.csv  enr_KEGG.csv  intersection.csv  intersection.txt  venn_config.py  venn_plot.py  venn_plot_csvinput.ipynb
notebooks/: example.ipynb  example_dock.ipynb  example_tcmsp.ipynb  herb_components.csv  ingredient_query.py  type_prosecing_test.ipynb
notebooks/data/: kegg_test.csv  targets_total_file.csv
notebooks/data_processing_dir/: data_processing.ipynb
script/: chembal-target.sh  conda_publish.sh  diffdock.sh  fix_conda.sh  minino.sh  playwright.sh  redis.sh  unset_proxy.sh
tests/: stitch_read.ipynb  tesr.py  test.ipynb  test.py
tests/test_data/: all_results.csv  data_process.ipynb  go_results.csv  kegg_results.csv  test_target.py
tests/unit/: test_enrich_gokegg.py  test_enrich_plot.py  test_venn_plot.py
