[tool.poetry]
name = "biorange"
version = "1.4.2"
description = ""
authors = ["liuyan <lyfx99@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
mygene = "^3.2.2"
playwright = "^1.46.0"
networkx = "^3.3"
matplotlib = "^3.9.2"
matplotlib-venn = "^1.1.1"
docker = "^7.1.0"
py3dmol = "^2.4.0"
gseapy = "^1.1.3"
plotnine = "^0.13.6"
pytest = "^8.3.3"
bioblend = "^1.3.0"
planemo = "^0.75.26"
prolif = {extras = ["tutorials"], version = "^2.0.3"}
numpy = "1.26.4"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
smina = "biorange.dock.smina:main"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
