[tool.poetry]
name = "biorange"
version = "1.4.3"
description = ""
authors = ["liuyan <lyfx99@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyyaml = "^6.0.2"
requests = "*"
mygene = "*"
playwright = "1.46.0"
networkx = "*"
matplotlib = "*"
matplotlib-venn = "*"
docker = "*"
py3dmol = "*"
gseapy = "^1.1.3"
plotnine = "*"
bioblend = "*"
planemo = "*"
prolif = "*"
numpy = "1.26.4"
beautifulsoup4 = "*"
pyfiglet = "*"
termcolor = "*"
rdkit = "*"

[tool.poetry.scripts]
smina = "biorange.dock.smina:main"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
